# QuickJS-Debugger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  codegen.ps1  test.js
.github/workflows/: build.yml  release.yml
debugger/: CMakeLists.txt
debugger/src/: cdp_handler.cpp  debug_session.cpp  debug_session.h  main.cpp
